Add sudo permission

--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout tools
         run: make --version >/dev/null 2>&1 && echo OK
       - name: Setup tools
-        run: ./setup.sh
+        run: sudo ./setup.sh
         working-directory: module3_task1
       - name: Check target post in makefile
         run: make POST_NAME=test-post POST_TITLE="Test Post" post
