--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -36,9 +36,11 @@ jobs:
         working-directory: module3_task2
       - uses: actions/upload-artifact@v3
         with:
+          name: awesome-website.zip
           path: module3_task2/awesome-website.zip
           if-no-files-found: error
 
       - uses: actions/download-artifact@v3
         with:
+          name: awesome-website.zip
           path: module3_task2/awesome-website.zip
