--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -28,8 +28,8 @@ jobs:
         working-directory: module3_task2
       - name: Check Integration tests
         run: |
+          make unit-tests
           make package
-          make clean
         working-directory: module3_task2
       - name: Upload zip file
         if: ${{ success()}}
