Update Makefile and workflow v4 (with validate make target)

--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -28,6 +28,7 @@ jobs:
         working-directory: module3_task2
       - name: Check Integration tests
         run: |
+          make validate
           make integration-tests
           make unit-tests
           make package
