--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -4,8 +4,6 @@ on:
     branches:
       - main
       - master
-    tags:
-      - "*"
     schedule:
       - cron: "0 23 * * *"
 jobs:
@@ -36,6 +34,15 @@ jobs:
           make unit-tests
           make package
         working-directory: module3_task3
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          tag_name: 1.0.0
+          body_path: module3_task3/DEPLOY.md
+          files: |
+            module3_task3/awesome-website.zip
+            module3_task3/DEPLOY.md
       - name: Upload zip file
         if: ${{ success()}}
         uses: actions/upload-artifact@v3
@@ -43,9 +50,3 @@ jobs:
           name: upload-package
           path: module3_task3/awesome-website.zip
           if-no-files-found: error
-      - name: 1.0.0
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/1.0.0')
-        with:
-          body_path: module3_task3/DEPLOY.md
-          files: awesome-website.zip
