--- a/.github/workflows/module3_task4.yml
+++ b/.github/workflows/module3_task4.yml
@@ -36,7 +36,7 @@ jobs:
           make unit-tests
           make package
         working-directory: module3_task4
-      - name: Release 1.0.1
+      - name: Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: 1.0.1
