Convert to smbolic links

--- a/module3_task4/github-workflow.yml
+++ b/module3_task4/github-workflow.yml
@@ -1,52 +1,1 @@
-name: module3_task4
-on:
-  push:
-    branches:
-      - main
-      - master
-  schedule:
-    - cron: "0 23 * * *"
-  pull_request:
-    types: [opened, edited, reopened, ready_for_review]
-jobs:
-  All-Validation-Code:
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Checkout tools
-        run: make --version >/dev/null 2>&1 && echo OK
-        working-directory: module3_task4
-      - name: Setup tools
-        run: sudo ./setup.sh
-        working-directory: module3_task4
-      - name: Check target lint in makefile
-        run: make lint
-        working-directory: module3_task4
-      - name: Check target build in makefile
-        run: make build
-        working-directory: module3_task4
-      - name: Check target post in makefile
-        run: make POST_NAME=test-post POST_TITLE="Test Post" post
-        working-directory: module3_task4
-      - name: Check Integration tests
-        run: |
-          make validate
-          make integration-tests
-          make unit-tests
-          make package
-        working-directory: module3_task4
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: 1.0.1
-          files: |
-            module3_task4/awesome-website.zip
-            module3_task4/DEPLOY.md
-      - name: Upload zip file
-        if: ${{ success()}}
-        uses: actions/upload-artifact@v3
-        with:
-          name: upload-package
-          path: module3_task4/awesome-website.zip
-          if-no-files-found: error
+../.github/workflows/module3_task4.yml
