--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -36,6 +36,7 @@ jobs:
         working-directory: module3_task3
       - name: Release 1.0.0
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           tag_name: 1.0.0
           body_path: module3_task3/DEPLOY.md
