--- a/.github/workflows/module3_task5.yml
+++ b/.github/workflows/module3_task5.yml
@@ -36,7 +36,7 @@ jobs:
           make unit-tests
           make package
         working-directory: module3_task5
-      - name: New Release
+      - name: Release Drafter
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
