--- a/module4_task2/Makefile
+++ b/module4_task2/Makefile
@@ -35,14 +35,13 @@ package: ## Create a zip file with dist/ directory
 lint: ## Lint the README.md and DEPLOY.md files and lint Dockerfile
 # @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
 # @apt-get install curl -y
-	@curl --silent --location -fsSL https://deb.nodesource.com/setup_16.x | bash -
-	@apt-get update
+	@curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
 	@apt-get install -y nodejs
 	@npm install -g markdownlint-cli -y || true
 	@markdownlint README.md DEPLOY.md && echo OK
-	@sudo wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
-	@sudo chmod +x /usr/local/bin/hadolint
-	@hadolint build/Dockerfile && echo OK
+# @sudo wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
+# @sudo chmod +x /usr/local/bin/hadolint
+# @hadolint build/Dockerfile && echo OK
 
 unit-tests: ## Unit tests coverage
 	@touch coverage-units.out
