--- a/module4_task2/Makefile
+++ b/module4_task2/Makefile
@@ -34,12 +34,15 @@ package: ## Create a zip file with dist/ directory
 
 lint: ## Lint the README.md and DEPLOY.md files and lint Dockerfile
 # @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
-	@sudo apt-get install curl -y wget -y
+	@sudo apt-get install curl -y
 	@curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
 	@apt-get install -y nodejs
 	@npm install -g markdownlint-cli -y || true
 	@markdownlint README.md DEPLOY.md && echo OK
-	@wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
+	@curl https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64 -o hadolint
+	@mv hadolint /usr/local/bin/
+	@chmod +x /usr/local/bin/hadolint
+# @wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
 # @chmod +x /usr/local/bin/hadolint
 # @hadolint build/Dockerfile && echo OK
 
