--- a/module4_task2/Makefile
+++ b/module4_task2/Makefile
@@ -33,17 +33,17 @@ package: ## Create a zip file with dist/ directory
 	@zip -r awesome-website.zip dist/
 
 lint: ## Lint the README.md and DEPLOY.md files and lint Dockerfile
-# @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
-	@apt-get install curl -y &&\
-	curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
-	apt-get install -y nodejs || apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
+	@apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
+# @apt-get install curl -y &&\
+# curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
+# apt-get install -y nodejs || apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
 	@npm install -g markdownlint-cli -y
 	@markdownlint README.md DEPLOY.md
-# @wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
-# @chmod +x /usr/local/bin/hadolint
-	@curl https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64 -o hadolint
-	@mv hadolint /usr/local/bin/
+	@wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
 	@chmod +x /usr/local/bin/hadolint
+# @curl https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64 -o hadolint
+# @mv hadolint /usr/local/bin/
+# @chmod +x /usr/local/bin/hadolint
 	@hadolint build/Dockerfile && echo OK
 
 unit-tests: ## Unit tests coverage
