--- a/module4_task2/Makefile
+++ b/module4_task2/Makefile
@@ -33,7 +33,10 @@ package: ## Create a zip file with dist/ directory
 	@zip -r awesome-website.zip dist/
 
 lint: ## Lint the README.md and DEPLOY.md files and lint Dockerfile
-	@apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
+# @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
+	@apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0 || apt-get install curl -y &&\
+	curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
+	apt-get install -y nodejs
 # @apt-get install curl -y &&\
 # curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
 # apt-get install -y nodejs || apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
@@ -56,6 +59,8 @@ build-docker: ## Create a new Docker image named awesome:build
 	@docker build -t awesome:build -f build/Dockerfile .
 
 docker-build: ## Create a new Docker image named awesome:build passed lint
+	@wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
+	@chmod +x /usr/local/bin/hadolint
 	@hadolint build/Dockerfile && docker build -t awesome:build -f build/Dockerfile .
 
 test: ## Execute Tests
