Fix install commands in Makefile

--- a/module4_task2/Makefile
+++ b/module4_task2/Makefile
@@ -33,10 +33,10 @@ package: ## Create a zip file with dist/ directory
 	@zip -r awesome-website.zip dist/
 
 lint: ## Lint the README.md and DEPLOY.md files and lint Dockerfile
-# @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
-	@apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0 || apt-get install curl -y &&\
-	curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
-	apt-get install -y nodejs
+	@apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
+# @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0 || apt-get install curl -y &&\
+# curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
+# apt-get install -y nodejs
 # @apt-get install curl -y &&\
 # curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
 # apt-get install -y nodejs || apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
