--- a/module4_task2/MakefileDocker
+++ b/module4_task2/MakefileDocker
@@ -4,10 +4,11 @@
 DIST_DIR = dist
 
 build: ## Create the Hugo website using Hugo
-	@apt-get install curl -y &&\
+# @apt-get install curl -y &&\
 	curl -L https://github.com/gohugoio/hugo/releases/download/v0.109.0/hugo_extended_0.109.0_linux-amd64.deb -o hugo.deb &&\
 	apt-get install ./hugo.deb &&\
-	rm ./hugo.deb
+	rm ./hugo.deb || apk add --no-cache hugo=0.79.1-r0
+	@apk add --no-cache hugo=0.79.1-r0
 	@hugo
 	@touch awesome-api
 
@@ -23,30 +24,30 @@ post: ## Create a new post in Markdown to content/posts using POST_NAME and POST
 	@sed -i '2i $(NEW_LINE)' content/posts/$(POST_NAME).md
 
 package: ## Create a zip file with dist/ directory
-# @apk add --no-cache hugo=0.79.1-r0
-	@apt-get install curl -y &&\
-	curl -L https://github.com/gohugoio/hugo/releases/download/v0.109.0/hugo_extended_0.109.0_linux-amd64.deb -o hugo.deb &&\
-	apt-get install ./hugo.deb &&\
-	rm ./hugo.deb
+# @apt-get install curl -y &&\
+# curl -L https://github.com/gohugoio/hugo/releases/download/v0.109.0/hugo_extended_0.109.0_linux-amd64.deb -o hugo.deb &&\
+# apt-get install ./hugo.deb &&\
+# rm ./hugo.deb || apk add --no-cache hugo=0.79.1-r0
+	@apk add --no-cache hugo=0.79.1-r0
 	@hugo
 	@zip -r awesome-website.zip dist/
 
 lint: ## Lint the README.md and DEPLOY.md files and lint Dockerfile
-# @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
 # @apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0 || apt-get install curl -y &&\
 # curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
 # apt-get install -y nodejs
-# @apt-get install curl -y
-	@curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
-	@apt-get install -y nodejs
+# @apt-get install curl -y &&\
+# curl -fsSL https://deb.nodesource.com/setup_16.x | bash - &&\
+# apt-get install -y nodejs || apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
+	@apk add --no-cache nodejs=14.20.1-r0 npm=14.20.1-r0
 	@npm install -g markdownlint-cli -y
 	@markdownlint README.md DEPLOY.md
-# @wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
-# @chmod +x /usr/local/bin/hadolint
-	@curl https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64 -o hadolint
-	@mv hadolint /usr/local/bin/
+	@wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
 	@chmod +x /usr/local/bin/hadolint
-	@hadolint build/Dockerfile && echo hadolint_OK
+	@hadolint build/Dockerfile && echo OK
+# @curl https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64 -o hadolint
+# @mv hadolint /usr/local/bin/
+# @chmod +x /usr/local/bin/hadolint
 
 unit-tests: ## Unit tests coverage
 	@touch coverage-units.out
@@ -61,11 +62,6 @@ docker-build: ## Create a new Docker image named awesome:build passed lint
 	@wget -O /usr/local/bin/hadolint -q -nv https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
 	@chmod +x /usr/local/bin/hadolint
 	@hadolint build/Dockerfile && docker build -t awesome:build -f build/Dockerfile .
-
-run-docker: ## Run docker with correct Makefile
-	@cat Makefile > MakefileLocal
-	@cat MakefileDocker > Makefile
-	@docker run -v $(pwd):/app awesome:build /bin/sh
 
 test: ## Execute Tests
 	@make unit-tests
